# tacowrap

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  cliff.toml  deny.toml  typos.toml
.github/workflows/: book.yml
docs/: biome.json  bun.lockb  package.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: style.css
docs/src/: index.md
docs/src/misc/: license.md  team.md
src/: bench.rs  cli.rs  daemon.rs  fuse.rs  logger.rs  main.rs
src/fuse/: interface.rs  mod.rs  wrapper.rs
src/gocryptfs/: config.rs  content.rs  mod.rs  names.rs
